vmafd/include/public/vmafdclient.h

DWORD
VmAfdGetStatusA(
    PCSTR         pszServerName,  /* IN     OPTIONAL */
    PVMAFD_STATUS pStatus         /* IN OUT          */
    );
/**
 * Returns the status of the service
 *
 * @param pwszServerName The hostname where the service is running
 * @param pStatus        Receives the status of the service
 *
 * @return 0 if success, positive error code otherwise
 */
DWORD
VmAfdGetStatusW(
    PCWSTR        pwszServerName, /* IN     OPTIONAL */
    PVMAFD_STATUS pStatus         /* IN OUT          */
    );
DWORD
VmAfdGetDomainNameA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszDomain     /*    OUT          */
    );
DWORD
VmAfdGetDomainNameW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PWSTR* ppwszDomain     /*    OUT          */
    );
DWORD
VmAfdSetDomainNameA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PCSTR pszDomain      /* IN              */
    );
DWORD
VmAfdSetDomainNameW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PCWSTR pwszDomain      /* IN              */
    );
DWORD
VmAfdGetDomainStateA(
    PCSTR pszServerName,              /* IN     OPTIONAL */
    VMAFD_DOMAIN_STATE* pDomainState  /*    OUT          */
    );
DWORD
VmAfdGetDomainStateW(
    PCWSTR pwszServerName,            /* IN     OPTIONAL */
    VMAFD_DOMAIN_STATE* pDomainState  /*    OUT          */
    );
DWORD
VmAfdGetLDUA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszLDU        /* IN              */
    );
DWORD
VmAfdGetLDUW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PWSTR* ppwszLDU        /*    OUT          */
    );
DWORD
VmAfdSetLDUA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PCSTR pszLDU         /* IN              */
    );
DWORD
VmAfdSetLDUW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PCWSTR pwszLDU         /* IN              */
    );
DWORD
VmAfdGetRHTTPProxyPortA(
    PCSTR   pszServerName, /* IN    OPTIONAL */
    UINT32* pdwPort        /* IN    OPTIONAL */
    );
DWORD
VmAfdSetRHTTPProxyPortA(
    PCSTR  pwszServerName, /* IN    OPTIONAL */
    UINT32 dwPort          /* IN             */
    );
DWORD
VmAfdSetRHTTPProxyPortW(
    PCWSTR pwszServerName, /* IN    OPTIONAL */
    UINT32 dwPort          /* IN             */
    );
DWORD
VmAfdSetDCPortA(
    PCSTR  pwszServerName, /* IN    OPTIONAL */
    UINT32 dwPort          /* IN             */
    );
DWORD
VmAfdSetDCPortW(
    PCWSTR pwszServerName, /* IN    OPTIONAL */
    UINT32 dwPort          /* IN             */
    );
DWORD
VmAfdGetCMLocationA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszCMLocation /*    OUT          */
    );
DWORD
VmAfdGetCMLocationW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PWSTR* ppwszCMLocation /*    OUT          */
    );
DWORD
VmAfdGetLSLocationA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszLSLocation /*    OUT          */
    );
DWORD
VmAfdGetLSLocationW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PWSTR* ppwszLSLocation /*    OUT          */
    );
DWORD
VmAfdGetDCNameA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszDCName     /*    OUT          */
    );
DWORD
VmAfdGetDCNameW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PWSTR* ppwszDCName     /*    OUT          */
    );
DWORD
VmAfdSetDCNameA(
    PCSTR pszServerName,    /* IN     OPTIONAL */
    PCSTR pszDCName         /* IN              */
    );
DWORD
VmAfdSetDCNameW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PCWSTR pswzDCName      /* IN              */
    );
DWORD
VmAfdGetMachineAccountInfoA(
    PCSTR pszServerName,    /* IN     OPTIONAL */
    PSTR* ppszAccount,      /* IN              */
    PSTR* ppszPassword      /* IN              */
    );
DWORD
VmAfdGetMachineAccountInfoW(
    PCWSTR pwszServerName, /* IN     OPTIONAL */
    PWSTR* ppwszAccount,   /*    OUT          */
    PWSTR* ppwszPassword   /*    OUT          */
    );
DWORD
VmAfdPromoteVmDirA(
    PCSTR pszServerName,     /* IN     OPTIONAL */
    PCSTR pszDomainName,     /* IN              */
    PCSTR pszUserName,       /* IN              */
    PCSTR pszPassword,       /* IN              */
    PCSTR pszSiteName,       /* IN     OPTIONAL */
    PCSTR pszPartnerHostName /* IN     OPTIONAL */
    );
DWORD
VmAfdPromoteVmDirW(
    PCWSTR pwszServerName,    /* IN     OPTIONAL */
    PCWSTR pwszDomainName,    /* IN     OPTIONAL */
    PCWSTR pwszUserName,      /* IN              */
    PCWSTR pwszPassword,      /* IN              */
    PCWSTR pwszSiteName,      /* IN     OPTIONAL */
    PCWSTR pszPartnerHostName /* IN     OPTIONAL */
    );
DWORD
VmAfdDemoteVmDirA(
    PCSTR pszServerName,    /* IN     OPTIONAL */
    PCSTR pszUserName,      /* IN              */
    PCSTR pszPassword       /* IN              */
    );
DWORD
VmAfdDemoteVmDirW(
    PCWSTR pwszServerName,  /* IN     OPTIONAL */
    PCWSTR pwszUserName,    /* IN              */
    PCWSTR pwszPassword     /* IN              */
    );
DWORD
VmAfdJoinVmDirA(
    PCSTR pszServerName,     /* IN     OPTIONAL */
    PCSTR pszUserName,       /* IN              */
    PCSTR pszPassword,       /* IN              */
    PCSTR pszMachineName,    /* IN              */
    PCSTR pszDomainName,     /* IN              */
    PCSTR pszOrgUnit         /* IN     OPTIONAL */
    );
DWORD
VmAfdJoinVmDirW(
    PCWSTR pwszServerName,     /* IN     OPTIONAL */
    PCWSTR pwszUserName,       /* IN              */
    PCWSTR pwszPassword,       /* IN              */
    PCWSTR pwszMachineName,    /* IN              */
    PCWSTR pwszDomainName,     /* IN              */
    PCWSTR pwszOrgUnit         /* IN     OPTIONAL */
    );
DWORD
VmAfdLeaveVmDirA(
    PCSTR pszServerName,    /* IN     OPTIONAL */
    PCSTR pszUserName,      /* IN              */
    PCSTR pszPassword,      /* IN              */
    DWORD dwLeaveFlags      /* IN              */
    );
DWORD
VmAfdLeaveVmDirW(
    PCWSTR pwszServerName,  /* IN     OPTIONAL */
    PCWSTR pwszUserName,    /* IN              */
    PCWSTR pszPassword,     /* IN              */
    DWORD dwLeaveFlags      /* IN              */
    );
DWORD
VmAfdCreateComputerAccountA(
    PCSTR pszUserName,        /* IN              */
    PCSTR pszPassword,        /* IN              */
    PCSTR pszMachineName,     /* IN              */
    PCSTR pszOrgUnit,         /* IN     OPTIONAL */
    PSTR* ppszOutPassword     /* OUT             */
    );
DWORD
VmAfdCreateComputerAccountW(
    PCWSTR pwszUserName,      /* IN              */
    PCWSTR pwszPassword,      /* IN              */
    PCWSTR pwszMachineName,   /* IN              */
    PCWSTR pwszOrgUnit,       /* IN     OPTIONAL */
    PWSTR* ppwszOutPassword   /* OUT             */
    );
DWORD
VmAfdJoinADA(
    PCSTR pszServerName,     /* IN     OPTIONAL */
    PCSTR pszUserName,       /* IN              */
    PCSTR pszPassword,       /* IN              */
    PCSTR pszDomainName,     /* IN              */
    PCSTR pszOrgUnit         /* IN     OPTIONAL */
    );
DWORD
VmAfdJoinADW(
    PCWSTR pwszServerName,     /* IN     OPTIONAL */
    PCWSTR pwszUserName,       /* IN              */
    PCWSTR pwszPassword,       /* IN              */
    PCWSTR pwszDomainName,     /* IN              */
    PCWSTR pwszOrgUnit         /* IN     OPTIONAL */
    );
DWORD
VmAfdLeaveADA(
    PCSTR pszServerName,    /* IN        OPTIONAL */
    PCSTR pszUserName,      /* IN                 */
    PCSTR pszPassword       /* IN                 */
    );
DWORD
VmAfdLeaveADW(
    PCWSTR pwszServerName,  /* IN        OPTIONAL */
    PCWSTR pwszUserName,    /* IN                 */
    PCWSTR pwszPassword     /* IN                 */
    );
DWORD
VmAfdGetPNIDForUrlA(
    PCSTR pszServerName,
    PSTR* ppszPNIDUrl
    );
DWORD
VmAfdGetPNIDA(
    PCSTR pszServerName,
    PSTR* ppszPNID
    );
DWORD
VmAfdGetPNIDW(
    PCWSTR pwszServerName,
    PWSTR* ppwszPNID
    );
DWORD
VmAfdSetPNIDA(
    PCSTR pszServerName,
    PCSTR pszPNID
    );
DWORD
VmAfdSetPNIDW(
    PCWSTR pwszServerName,
    PCWSTR pwszPNID
    );