vmafd/interop/java/vmaf/src/main/java/com/vmware/af/interop/VmAfClientAdapter.java

/*
 * Copyright © 2012-2015 VMware, Inc.  All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the “License”); you may not
 * use this file except in compliance with the License.  You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an “AS IS” BASIS, without
 * warranties or conditions of any kind, EITHER EXPRESS OR IMPLIED.  See the
 * License for the specific language governing permissions and limitations
 * under the License.
 */

package com.vmware.af.interop;

import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.Pointer;
import com.sun.jna.WString;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;
import com.vmware.af.DomainInfo;
import com.vmware.af.PasswordCredential;
import com.vmware.af.VmAfClientNativeException;

public class VmAfClientAdapter extends NativeAdapter
{
    public interface VmAfClientLibrary extends Library
    {
        VmAfClientLibrary INSTANCE =
                (VmAfClientLibrary) Native.loadLibrary(
                                                "vmafdclient",
                                                VmAfClientLibrary.class);

        int
        VmAfdGetStatusA(
            String         pszServerName,  /* IN     OPTIONAL */
            IntByReference pStatus         /* IN OUT          */
            );

        int
        VmAfdGetStatusW(
            WString        pwszServerName, /* IN     */
            IntByReference pStatus         /* IN OUT */
            );

        int
        VmAfdGetDomainNameA(
            String             pszServerName,    /* IN     OPTIONAL */
            PointerByReference ppszDomain        /*    OUT          */
            );

        int
        VmAfdGetDomainNameW(
            WString            pwszServerName,  /* IN     OPTIONAL */
            PointerByReference ppwszDomain      /*    OUT          */
            );

        int
        VmAfdSetDomainNameA(
            String pszServerName, /* IN     OPTIONAL */
            String pszDomain      /* IN              */
            );

        int
        VmAfdSetDomainNameW(
            WString pwszServerName, /* IN     OPTIONAL */
            WString pwszDomain      /* IN              */
            );

        int
        VmAfdGetDomainStateA(
            String             pszServerName,    /* IN     OPTIONAL */
            PointerByReference pDomainState      /*    OUT          */
            );

        int
        VmAfdGetDomainStateW(
            WString            pwszServerName,  /* IN     OPTIONAL */
            PointerByReference pDomainState     /*    OUT          */
            );

        int
        VmAfdGetLDUA(
            String             pszServerName, /* IN     OPTIONAL */
            PointerByReference ppszLDU        /*    OUT          */
            );

        int
        VmAfdGetLDUW(
            WString            pwszServerName,  /* IN     OPTIONAL */
            PointerByReference ppwszLDU         /*    OUT          */
            );

        int
        VmAfdSetLDUA(
            String pszServerName, /* IN     OPTIONAL */
            String pszLDU         /*    OUT          */
            );

        int
        VmAfdSetLDUW(
            WString pwszServerName, /* IN     OPTIONAL */
            WString pwszLDU         /* IN              */
            );

        int
        VmAfdGetRHTTPProxyPortA(
            String pszServerName, /* IN     OPTIONAL */
            IntByReference pdwPort
            );

        int
        VmAfdSetRHTTPProxyPortA(
            String pszServerName, /* IN     OPTIONAL */
            int port              /* IN              */
            );

        int
        VmAfdSetRHTTPProxyPortW(
            WString pwszServerName, /* IN     OPTIONAL */
            int port                /* IN              */
            );

        int
        VmAfdSetDCPortA(
            String pszServerName, /* IN     OPTIONAL */
            int port              /* IN              */
            );

        int
        VmAfdSetDCPortW(
            WString pwszServerName, /* IN     OPTIONAL */
            int port                /* IN              */
            );

        int
        VmAfdGetCMLocationA(
            String             pszServerName,    /* IN     OPTIONAL */
            PointerByReference ppszCMLocation    /*    OUT          */
            );

        int
        VmAfdGetCMLocationW(
            WString            pwszServerName,  /* IN     OPTIONAL */
            PointerByReference ppwszCMLocation  /*    OUT          */
            );

        int
        VmAfdGetLSLocationA(
            String             pszServerName,    /* IN     OPTIONAL */
            PointerByReference ppszLSLocation    /*    OUT          */
            );

        int
        VmAfdGetLSLocationW(
            WString            pwszServerName,  /* IN     OPTIONAL */
            PointerByReference ppwszLSLocation  /*    OUT          */
            );

        int
        VmAfdSetLSLocationW(
            WString pwszServerName, /* IN     OPTIONAL */
            WString pwszLSLocation  /* IN              */
            );

        int
        VmAfdGetDCNameA(
            String             pszServerName,    /* IN     OPTIONAL */
            PointerByReference ppszDCName        /*    OUT          */
            );

        int
        VmAfdGetDCNameW(
            WString            pwszServerName,  /* IN     OPTIONAL */
            PointerByReference ppwszDCName      /*    OUT          */
            );

        int
        VmAfdSetDCNameA(
            String pszServerName,    /* IN      OPTIONAL */
            String pszDCName         /* IN               */
            );

        int
        VmAfdSetDCNameW(
            WString pwszServerName,  /* IN      OPTIONAL */
            WString pwszDCName       /* IN               */
            );

        int
        VmAfdGetPNIDForUrlA(
            String             pszServerName,
            PointerByReference ppszPNID
            );

        int
        VmAfdGetPNIDA(
            String             pszServerName,
            PointerByReference ppszPNID
            );

        int
        VmAfdGetPNIDW(
            WString            pwszServerName,
            PointerByReference ppwszPNID
            );

        int
        VmAfdSetPNIDA(
            String pszServerName,
            String pszPNID
            );

        int
        VmAfdSetPNIDW(
            WString pwszServerName,
            WString pwszPNID
            );

        int
        VmAfdGetMachineAccountInfoA(
            String             pszServerName,    /* IN     OPTIONAL */
            PointerByReference ppszAccount,      /*    OUT          */
            PointerByReference ppszPassword      /*    OUT          */
            );

        int
        VmAfdGetMachineAccountInfoW(
            WString            pwszServerName,  /* IN     OPTIONAL */
            PointerByReference ppwszAccount,    /*    OUT          */
            PointerByReference ppwszPassword    /*    OUT          */
            );

        int
        VmAfdPromoteVmDirA(
            String pszServerName,    /* IN              */
            String pszDomainName,    /* IN              */
            String pszUserName,      /* IN              */
            String pszPassword,      /* IN              */
            String pszSiteName,      /* IN              */
            String pszPartnerName    /* IN              */
            );

        int
        VmAfdPromoteVmDirW(
            WString pwszServerName,  /* IN              */
            WString pwszDomainName,  /* IN              */
            WString pwszUserName,    /* IN              */
            WString pwszPassword,    /* IN              */
            WString pszSiteName,     /* IN              */
            WString pszPartnerName   /* IN              */
            );

        int
        VmAfdDemoteVmDirA(
            String pszServerName,    /* IN              */
            String pszUserName,      /* IN              */
            String pszPassword       /* IN              */
            );

        int
        VmAfdDemoteVmDirW(
            WString pwszServerName,  /* IN              */
            WString pwszUserName,    /* IN              */
            WString pwszPassword     /* IN              */
            );

        int
        VmAfdJoinVmDirA(
            String pszServerName,    /* IN              */
            String pszUserName,      /* IN              */
            String pszPassword,      /* IN              */
            String pszMachineName,   /* IN             */
            String pszDomainName,    /* IN             */
            String pszOrgUnit        /* IN             */
            );

        int
        VmAfdJoinVmDirW(
            WString pwszServerName,  /* IN              */
            WString pwszUserName,    /* IN              */
            WString pwszPassword,    /* IN              */
            WString pszMachineName,  /* IN             */
            WString pszDomainName,   /* IN             */
            WString pszOrgUnit       /* IN             */
            );

        int
        VmAfdLeaveVmDirA(
            String pszServerName,    /* IN              */
            String pszUserName,      /* IN              */
            String pszPassword       /* IN              */
            );

        int
        VmAfdLeaveVmDirW(
            WString pwszServerName,  /* IN              */
            WString pwszUserName,    /* IN              */
            WString pwszPassword     /* IN              */
            );

        int
        VmAfdJoinADA(
            String pszServerName,    /* IN              */
            String pszUserName,      /* IN              */
            String pszPassword,      /* IN              */
            String pszDomainName,    /* IN              */
            String pszOrgUnit        /* IN              */
            );

        int
        VmAfdJoinADW(
            WString pwszServerName,  /* IN              */
            WString pwszUserName,    /* IN              */
            WString pwszPassword,    /* IN              */
            WString pszDomainName,   /* IN              */
            WString pszOrgUnit       /* IN              */
            );

        int
        VmAfdLeaveADA(
            String pszServerName,    /* IN              */
            String pszUserName,      /* IN              */
            String pszPassword       /* IN              */
            );

        int
        VmAfdLeaveADW(
            WString pwszServerName,  /* IN              */
            WString pwszUserName,    /* IN              */
            WString pwszPassword     /* IN              */
            );

        int
        VmAfdCreateComputerAccountA(
            String pszUserName,              /* IN              */
            String pszPassword,              /* IN              */
            String pszMachineName,           /* IN              */
            String pszOrgUnit,               /* IN              */
            PointerByReference ppszOutPassword /* OUT             */
            );

        int
        VmAfdCreateComputerAccountW(
            WString pwszUserName,             /* IN              */
            WString pwszPassword,             /* IN              */
            WString pwszMachineName,          /* IN              */
            WString pwszOrgUnit,              /* IN              */
            PointerByReference ppwszOutPassword /* OUT             */
            );
